<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="17dp"
        android:tag="general"       
        android:text="@string/pan_question"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/chkYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="24dp"
        android:tag="general"
        android:text="@string/pan_yes" />

    <CheckBox
        android:id="@+id/chkNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chkYes"
        android:tag="general"     
        android:layout_marginLeft="24dp"
        android:text="@string/pan_no" />

    <Button
        android:id="@+id/btnFBShare"
        style="@style/facebook_loginview_default_style"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/chkYes"
        android:layout_margin="10dp"
        android:layout_marginRight="54dp"
        android:drawableLeft="@drawable/com_facebook_inverse_icon"
        android:text="@string/fb_share_button"
        android:textColor="#FFFFFF" />
 
    <TextView
        android:id="@+id/txtMessage"
        android:visibility="invisible"  
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnFBShare"
        android:padding="10dp"
        android:tag="general"
        android:text="@string/pan_not_logged" />

</RelativeLayout>