<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/lay_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/race_title_background"
        android:padding="4dp" >

        <TextView
            android:id="@+id/txt_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_marginLeft="16dp"
            android:tag="title" 
            android:text="Large Text"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
            
              <com.daimajia.slider.library.SliderLayout
                android:id="@+id/GroupSlider"
                android:layout_width="match_parent"
                android:layout_height="250dp" >
            </com.daimajia.slider.library.SliderLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/row_section" >
                
                <TextView
                    android:id="@+id/txt_atrr_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:tag="general"
                    android:textColor="@color/blue"  
                    android:text="@string/atr_group_location"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_group_loctation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/txt_atrr_location"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:tag="general"  
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="14sp" />
                
                <TextView
                    android:id="@+id/txt_atrr_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:layout_below="@id/txt_group_loctation"             
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:tag="general"
                    android:textColor="@color/blue"  
                    android:text="@string/atr_group_schedule"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_group_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/txt_atrr_schedule"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:tag="general"  
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="14sp" />
                

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_group_schedule"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:tag="general"
                    android:textColor="@color/blue"  
                    android:text="@string/atr_group_description"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_group_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/textView2"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:tag="general"  
                    android:text="Small Text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_atrr_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/txt_group_description"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="10dp"
                    android:tag="general"  
                    android:textColor="@color/blue"
                    android:text="@string/atr_group_facebook"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_group_fb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/txt_atrr_fb"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:tag="general"  
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="14sp" />

            </RelativeLayout>

          

        </LinearLayout>
    </ScrollView>

</LinearLayout>
